--- a/package.json
+++ b/package.json
@@ -50,6 +50,11 @@
   "devDependencies": {
     "@astrojs/netlify": "^6.6.3",
     "@astrojs/vercel": "^8.0.4",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.28.0",
+    "@types/node": "^25.3.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "astro-compress": "^2.3.8",
