--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "~/*": ["src/*"]
     },
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": ["node"]
   }
 }
