--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@astrojs/sitemap": "^3.0.4",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.7",
+    "@vercel/speed-insights": "^1.3.1",
     "astro": "^5.16.6",
     "astro-embed": "^0.9.2",
     "astro-mermaid": "^1.1.0",
