--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build && pagefind --site dist && npm run copy-sitemap",
+    "build": "cross-env ADAPTER=cloudflare astro build && pagefind --site dist && npm run copy-sitemap",
     "build:vercel": "cross-env ADAPTER=vercel astro build && pagefind --site dist",
     "build:netlify": "cross-env ADAPTER=netlify astro build && pagefind --site dist",
     "build:cloudflare": "cross-env ADAPTER=cloudflare astro build && pagefind --site dist",
@@ -17,7 +17,7 @@
     "deploy": "npm run build:cloudflare && wrangler deploy",
     "preview:worker": "wrangler dev",
     "astro": "astro",
-    "copy-sitemap": "copy /Y dist\\client\\sitemap-0.xml dist\\client\\sitemap.xml"
+    "copy-sitemap": "copy /Y dist\\sitemap-0.xml dist\\sitemap.xml"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.6",
@@ -60,7 +60,8 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "astro-compress": "^2.3.8",
-    "cross-env": "^10.1.0"
+    "cross-env": "^10.1.0",
+    "dotenv": "^17.3.1"
   },
   "overrides": {
     "vite": "^6.0.0"
